fixed z-index of nav & side breadcrumbs

--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -1047,7 +1047,7 @@ body.profile, body.story {
     margin-top: -100px + $nav-height;
     position: fixed;
     top: 0;
-    z-index: 10;
+    z-index: 6;
     opacity: 0;
 
     &.visible {
